# python-website

./: .gitignore  LICENSE  README.md  app.py  battery_compare_scoring.py  diagnose.bat  hello_streamlit.py  iphone Xs.csv  pyproject.toml  requirements.txt  run_streamlit.bat
docs/: pidumkova-tablytsya-porivnyannya-akb.md
test-files/: README.md  iPhoneXs1_W39.2g_Ucell4.35V_Ustor3.8V_IR18mOhm_Ustart4.26V.csv  iPhoneXs2_W40.8g_Ucell4.35V_Ustor3.7V_IR19.2mOhm_Ustart4.33V.csv  iPhoneXs3_W39.6g_Ucell4.35V_Ustor3.96V_IR16.4mOhm_Ustart4.33V.csv  iPhoneXs4_W42.7g_Ucell4.35V_Ustor3.95V_IR14.06mOhm_Ustart4.27V.csv  iPhoneXs5_W40.7g_Ucell4.35V_Ustor3.8V_IR11.06mOhm_Ustart4.31V.csv
tests/: test_battery_compare_scoring.py
